feat: build API upgrade user to seller
